# AI-leads

./: .gitignore  Dockerfile  README.md  Untitled.ipynb  intermediate.csv  output_example.csv  pyproject.toml  requirements.txt
data/: 20231111_leads_tests.csv  clean_table_companies.py  jobs_12_may.csv  jobs_14_may.csv  jobs_16_may.csv  jobs_9_may.csv  jobs_tests.csv  jobs_tests_15_feb.csv  jobs_tests_22_jan.csv  jobs_tests_2_feb.csv  jobs_tests_3_feb copy.csv  jobs_tests_3_feb.csv  jobs_tests_3_feb_part 2.csv  jobs_tests_3_feb_part_2.csv  jobs_tests_5_may.csv  jobs_tests_5_may_groq.csv  leads_14_may.csv  leads_16_may.csv  leads_5_may.csv  leads_9_may.csv  leads_tests.csv  leads_tests_5_may.csv  leads_tests_bis.csv  leads_tests_ter.csv  leads_tests_tests_2_feb.csv  leads_tests_tests_3_feb.csv  list_city_idf.txt  list_non_recruiting_company.txt  list_recruiting_company.txt  table_companies.csv  table_companies_groq.csv  table_companies_test.csv  table_companies_test_groq.csv  table_contact.csv  table_contact_test.csv  table_contact_test_groq.csv  table_jobs.csv  table_leads.csv
data/old/: jobs_tests_3_feb.csv  jobs_tests_8_feb.csv  jobs_tests_bis.csv  jobs_tests_v0.csv  leads_tests.csv  leads_tests_22_jan.csv  leads_tests_8_feb.csv  leads_tests_tests_2_feb.csv  leads_tests_tests_31_jan.csv
src/: app.py  df.csv
src/ai_leads/: Test.ipynb  Untitled.ipynb  create_database.ipynb  data_test.py  jobs_tests.csv  leads_tests.csv  utils.py
src/ai_leads/Config/: config_safe.py  param.py
src/ai_leads/Notebooks/Raphael/: Parse Reponse.ipynb  Test Grow.ipynb  Test.ipynb  Test_Small_LLM.ipynb  Untitled.ipynb  data_cleaning.ipynb
src/ai_leads/model/: base_retriever.py  job_dataset_creation.py  lead_dataset_creation.py  linkedin_contact.py  llm_model.py  navigator.py  streamlit_app.py
src/ai_leads/pipelines/: 1_pipeline_job_creation.py  2_pipeline_qualify_companies.py  3_pipeline_linkedin_contact.py  4_pipeline_lead_dataset_creation.py  all_pipelines.py  check_recruiters.py  entrypoint.sh  linkedin_contact_pipeline.py  pipeline_job_creation.py  pipeline_lead_dataset_creation.py
src/ai_leads/pipelines/pipeline_lead_qualification/: find_activity_sector.py  linkedin_contact_pipeline.py  qualify_companies.py
src/ai_leads/ui/dash_app/: app.py  callbacks.py  index.py  index_test.py  utils.py
src/ai_leads/ui/dash_app/Config/: param.py
src/ai_leads/ui/dash_app/assets/: custom_script.html  style.css
src/ai_leads/ui/dash_app/components/: add_contact.py  component_card.py  detail_overview.py  (+13 more)
src/model/: dataset_creation.py  html_scrapping.py  job_dataset_creation.py  lead_dataset_creation.py  llm_model.py  param.py  streamlit_app.py
src/model/Config/: param.py
(+2 files in other folders)
