[tool.black]
line-length = 120

[tool.isort]
line_length = 120

[tool.poetry]
name = "AI-Leads"
version = "0.1.0"
description = ""
authors = ["Raphael Adda <raphaeladda@live.fr>"]
readme = "README.md"
packages = [
    { include = "ai_leads", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
selenium = "^4.14.0"
langchain = "^0.0.325"
dateparser = "^1.1.8"
openai = "^0.28.1"
googlesearch-python = "^1.2.3"
python-dotenv = "^1.0.0"
tiktoken = "^0.5.1"
dash = "^2.14.1"
auth = "^0.5.3"
dash-bootstrap-components = "^1.5.0"
dash-auth = "^2.0.0"
xlsxwriter = "^3.1.9"
unidecode = "^1.3.7"
linkedin-scraper = "^2.11.2"
isort = "^5.13.2"
google-api-python-client = "^2.116.0"

[tool.poetry.group.dev.dependencies]
jupyterlab = "3.4.7"
watchdog = "^3.0.0"
streamlit = "^1.28.0"
black = {version = "^23.10.1", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
